Fixed technology page flickering

--- a/src/pages/Technology/Technology.scss
+++ b/src/pages/Technology/Technology.scss
@@ -117,9 +117,15 @@
         margin: 0 auto;
 
         .technology-img {
+            position: relative;
+            aspect-ratio: 1/1;
             order: 3;
             flex: 1;
-            max-width: 100%;
+            width: 100%;
+            height: 100%;
+            max-width: 30rem;
+            max-height: 30rem;
+            overflow: hidden;
         }
     
         .technology-nav {
